# TransmissionArduino

./: .gitignore  CMakeLists.txt  arduino-cli.cmake  rp2040.cmake
libraries-esp32/: transmission-cpp  transmission-esp32
libraries-rp2040/: transmission-arduino  transmission-rp2040
libraries-teensy/: transmission-teensy
libraries/transmission-arduino/: CMakeLists.txt  library.properties
libraries/transmission-arduino/examples/echo-server/: echo-server.ino
libraries/transmission-arduino/src/: ReliableConnectionSerial1.cpp  transmission-arduino.h
libraries/transmission-cpp/: CMakeLists.txt  library.properties
libraries/transmission-cpp/src/: Connection.cpp  Connection.h  Pipe.cpp  Pipe.h  ring_buffer.h  transmission-cpp.h
libraries/transmission-esp32/: CMakeLists.txt  library.properties
libraries/transmission-esp32/src/: ReliableConnectionSerial1.cpp  ReliableConnectionSerial1.h  ReliableConnectionUsbCdc.cpp  ReliableConnectionUsbCdc.h  transmission-esp32.h
libraries/transmission-macos/: CMakeLists.txt
libraries/transmission-macos/src/: ReliableConnectionMacOS.cpp  ReliableConnectionMacOS.h  transmission-macos.h
libraries/transmission-rp2040/: CMakeLists.txt  library.properties
libraries/transmission-rp2040/examples/echo-server/: echo-server.ino
libraries/transmission-rp2040/src/: ReliableConnectionSerial1.cpp  ReliableConnectionSerial1.h
libraries/transmission-teensy/: CMakeLists.txt  library.properties
libraries/transmission-teensy/src/: ReliableConnectionSerial1.cpp  ReliableConnectionSerial1.h  ReliableConnectionUsbCdc.cpp  ReliableConnectionUsbCdc.h  transmission-teensy.h
src/arduino/: CMakeLists.txt  library.properties
src/arduino/examples/echo-server/: echo-server.ino
src/arduino/src/: ReliableConnectionSerial1.h  transmission-arduino.h
src/cpp/: CMakeLists.txt
src/cpp/src/: Connection.h  transmission-cpp.h
src/esp32/: CMakeLists.txt  library.properties
src/esp32/examples/echo-server/: echo-server.ino
src/esp32/src/: ReliableConnectionSerial1.cpp  ReliableConnectionSerial1.h  ReliableConnectionUsbCdc.cpp  ReliableConnectionWiFiTcp.cpp  ReliableConnectionWiFiTcp.h  transmission-esp32.h
src/rp2040/: CMakeLists.txt
src/rp2040/src/: ReliableConnectionSerial1.cpp  ReliableConnectionUsbCdc.cpp  transmission-rp2040.h
src/teensy/: CMakeLists.txt  library.properties
src/teensy/examples/echo-server/: echo-server.ino
src/teensy/src/: transmission-teensy.h
tests/: CMakeLists.txt
transmission-stdio/: CMakeLists.txt  TransmissionMain.cpp  TransmissionMain.h  main.cpp
